syntax = "proto3";

package product;

option go_package = "example.com/microservices/libs/grpc/product";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message Product {
    string id = 1;
    string title = 2;
    google.protobuf.Timestamp created_at = 3;
}

message Products {
    repeated Product products = 1;
}

message CreateProductRequest {
    string title = 1;
}

message UpdateProductRequest {
    string id = 1;
    string title = 2;
}

message DeleteProductRequest {
    string id = 1;
}

service ProductService {
    rpc CreateProduct(CreateProductRequest) returns (google.protobuf.Empty);
    rpc GetAllProducts(google.protobuf.Empty) returns (Products);
    rpc UpdateProduct(UpdateProductRequest) returns (google.protobuf.Empty);
    rpc DeleteProduct(DeleteProductRequest) returns (google.protobuf.Empty);
}